
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DECODE64 (unsigned char) ;

int Base64Decode( char* out, const char* in, unsigned long size )
{
 int len = 0;
 register unsigned char digit1, digit2, digit3, digit4;

 if (in[0] == '+' && in[1] == ' ')
  in += 2;
 if (*in == '\r')
  return(0);

 do {
  digit1 = in[0];
  if (DECODE64(digit1) == -1)
   return(-1);
  digit2 = in[1];
  if (DECODE64(digit2) == -1)
   return(-1);
  digit3 = in[2];
  if (digit3 != '=' && DECODE64(digit3) == -1)
   return(-1);
  digit4 = in[3];
  if (digit4 != '=' && DECODE64(digit4) == -1)
   return(-1);
  in += 4;
  *out++ = (DECODE64(digit1) << 2) | (DECODE64(digit2) >> 4);
  ++len;
  if (digit3 != '=')
  {
   *out++ = ((DECODE64(digit2) << 4) & 0xf0) | (DECODE64(digit3) >> 2);
   ++len;
   if (digit4 != '=')
   {
    *out++ = ((DECODE64(digit3) << 6) & 0xc0) | DECODE64(digit4);
    ++len;
   }
  }
 } while (*in && *in != '\r' && digit4 != '=');

 return (len);
}
